# AzureKinectCameraFramework

./: CMakeLists.txt  README.md
include/: AzureKinectCamera.h  frame_rate_watcher.h  test.hpp  time2string.h
src/: AzureKinectCamera.cpp  main_demo.cpp  time2string.cpp
